[package]
edition = "2021"
name = "dtb2mmio"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-slice = "0.2.1"
dtb = "0.2.0"
log = {version = "0.4", default-features = false, features = ["std"]}
proc-macro2 = "1.0.50"
quote = "1.0.23"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "1.0.107"
